# ase-standup

./: .dockerignore  .env.vault  .gitignore  .gitpod-entrypoint.sh  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  docker-compose.yaml  dummy-data.json  package-lock.json  pyproject.toml  pyvenv.cfg  requirements.in  requirements.txt
.config/: pomerium-config.yaml
core/: test_my_view.py
standup/: manage.py  requirements.txt
standup/.devcontainer/: Dockerfile
standup/agenda/: admin.py  errors.py  managers.py  models.py  seralizers.py  serializers.py  urls.py  views.py
standup/agenda/migrations/: 0001_initial.py  0002_alter_agenda_date.py  0002_alter_agenda_date_alter_item_section_and_more.py  0002_item_link_to_ticket.py  0003_alter_agenda_call_items_alter_agenda_focus_items_and_more.py  0003_alter_agenda_date.py  0004_alter_agenda_date.py  0004_alter_agenda_date_alter_supportmail_edition_update_and_more.py  0004_alter_agenda_options_alter_agenda_date_and_more.py  0005_alter_agenda_call_items_alter_agenda_date_and_more.py  0005_alter_agenda_options_alter_agenda_date.py  0006_alter_item_date_resolved.py  0006_remove_supportmail_issues_and_more.py  0007_alter_agenda_date_alter_item_link_to_ticket.py  0008_alter_item_section_alter_item_status.py  0009_alter_item_section_alter_item_status.py  0010_remove_agenda_call_items_remove_agenda_focus_items_and_more.py  0011_alter_item_options_alter_agenda_date.py  0012_alter_item_section_alter_item_status_and_more.py
standup/authentication/: backend.py  managers.py  models.py
standup/dashboard/: forms.py  urls.py  views.py
standup/docs/: README.md
standup/standup/: asgi.py  backends.py  init.sh  middleware.py  settings.py  urls.py  utility.py  wsgi.py
standup/static/css/: style.css
standup/static/js/: main.js
standup/staticfiles/css/: style.css
standup/staticfiles/js/: main.js
standup/supportmail/: apps.py  urls.py  views.py
standup/templates/: download.html  index.html  support_mail.html
standup/templates/account/: login.html
standup/templates/includes/: _form_template.html  _modals.html  calls_list.html  calls_list2.html  focus_list.html  focus_list2.html  ifeat_list.html  internal_list.html  internal_list2.html  item-log.html  misc_list.html  misc_list2.html  modals.html  monitor_list.html  navbar.html  needs_list.html  needs_list2.html  review_list.html  sidebar.html  stats.html  updates_list.html  updates_list2.html  wins_oops.html
standup/templates/layouts/: _scripts.html  _styles.html  base-layout.html
standup/templates/registration/: login.html
staticfiles/css/: style.css
staticfiles/js/: main.js
